--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,4 +4,4 @@
 <link rel="stylesheet" href="/css/bootstrap.min.css" />
 <script src="/js/jquery.min.js"></script>
 <script src="/js/tether.min.js"></script>
-<script src="/js/bootstrap.min.js></script>
+<script src="/js/bootstrap.min.js"></script>
