Fixed Primary Key Problems. Editing Still broken.

--- a/views/pages/add-dvd-search.ejs
+++ b/views/pages/add-dvd-search.ejs
@@ -22,29 +22,29 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th style= "width:8%;text-align:center">Movie ID</th>
-                    <th style="width:15%;">Title</th>
-                    <th style="width:10%">Genre</th>
+                    <th style="width:8%;text-align:center">Movie ID</th>
+                    <th style="width:15%;text-align:center">Title</th>
+                    <th style="width:10%text-align:center">Genre</th>
                     <th style="width:10%;text-align:center">Rating</th>
-                    <th style="width:10%;">Release Date</th>
+                    <th style="width:10%;text-align:center;">Release Date</th>
                     <th style="width:8%;text-align:center">Cover Art</th>
-                    <th style="width:40%">Overview</th>
-                    <th style="width:5%">Select</th>
+                    <th style="width:40%;text-align:center">Overview</th>
+                    <th style="width:5%;text-align:center">Select</th>
                 </tr>
             </thead>
             <tbody>
                 <% movies.forEach(function(movie, index){ %>
                     <tr>
                         <td style="width:8%;text-align:center"><%= movie.id %></td>
-                        <td style="width:15%"><%= movie.title %></td>
-                        <td style="width:10%;"><%= "UNIMPLEMENTED" %></td>
+                        <td style="width:15%;text-align:center"><%= movie.title %></td>
+                        <td style="width:10%;text-align:center"><%= "UNIMPLEMENTED" %></td>
                         <td style="width:10%;text-align:center"><%= movie.vote_average %></td>
-                        <td style="width:10%"><%= movie.release_date %></td>
-                        <td style = "width:8%">
+                        <td style="width:10%;text-align:center"><%= movie.release_date %></td>
+                        <td style = "width:8%;text-align:center">
                             <img src="<%= 'https://image.tmdb.org/t/p/w185_and_h278_bestv2/'+ movie.poster_path %>"
                             alt= "<%= movie.title %>" width = 125px; height = 175px;/>
                         </td>
-                        <td style="width:40%"><%= movie.overview %></td>
+                        <td style="width:40%;"><%= movie.overview %></td>
                         <td style = "width:5%">
                             <br>
                             <a href="/dvd/add/<%= movie.id %>" class = "btn btn-success">Select</a>
