--- a/views/pages/add-dvd.ejs
+++ b/views/pages/add-dvd.ejs
@@ -5,26 +5,26 @@
         <table class="table">
             <thead>
                  <tr>
-                    <th style= "width:8%;text-align:center">Movie ID</th>
-                    <th style="width:15%;">Title</th>
-                    <th style="width:10%">Genre</th>
+                    <th style="width:8%;text-align:center">Movie ID</th>
+                    <th style="width:15%;text-align:center">Title</th>
+                    <th style="width:10%text-align:center">Genre</th>
                     <th style="width:10%;text-align:center">Rating</th>
-                    <th style="width:10%;">Release Date</th>
+                    <th style="width:10%;text-align:center;">Release Date</th>
                     <th style="width:8%;text-align:center">Cover Art</th>
-                    <th style="width:40%">Overview</th>
+                    <th style="width:40%;text-align:center">Overview</th>
              </thead>
              <tbody>
                  <tr>
                     <td style="width:8%;text-align:center"><%= TMDB_data.id %></td>
-                    <td style="width:15%"><%= TMDB_data.title %></td>
-                    <td style="width:10%;"><%= "UNIMPLEMENTED" %></td>
+                    <td style="width:15%;text-align:center"><%= TMDB_data.title %></td>
+                    <td style="width:10%;text-align:center"><%= "UNIMPLEMENTED" %></td>
                     <td style="width:10%;text-align:center"><%= TMDB_data.vote_average %></td>
-                    <td style="width:10%"><%= TMDB_data.release_date %></td>
-                    <td style="width:8%">
+                    <td style="width:10%;text-align:center"><%= TMDB_data.release_date %></td>
+                    <td style="width:8%;text-align:center">
                         <img src="<%= 'https://image.tmdb.org/t/p/w185_and_h278_bestv2/'+ TMDB_data.poster_path %>"
                         alt= "<%= TMDB_data.title %>" width = 125px; height = 175px;/>
                     </td>
-                    <td style="width:40%"><%= TMDB_data.overview %></td>
+                    <td style="width:40%;"><%= TMDB_data.overview %></td>
                  </tr>
              </tbody>
          </table>
